# candidate_scanner

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  extractor.py  pyproject.toml  search_tool.py  stress_test.py
.github/: pull_request_template.md
.streamlit/: config.toml
